--- a/diplomarbeit/sections/ch1_introduction/projekt-management.tex
+++ b/diplomarbeit/sections/ch1_introduction/projekt-management.tex
@@ -26,13 +26,14 @@ werden können. Grundsätzlich kann man sagen, dass Scrum Sinnvoll ist,
 wenn man mögliche Veränderungen anstrebt.
 
 \subsubsection{Artefakte und Sprints}
-Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich
-von PL abgenommen wurden.
-Sprint 01 18.Nov 2015 - 09.Dez 2015
-Sprint 02 09.Dez 2015 - 13.Jan 2016
-Sprint 03 13.Jan 2016 - 10.Feb 2016
-Sprint 04 10.Feb 2016 - 02.März 2016
-Sprint 05 02.März 2016 - 14.März 2016
+Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich von PL abgenommen wurden.
+\begin{description}
+\item Sprint 01 18.Nov 2015 - 09.Dez 2015
+\item Sprint 02 09.Dez 2015 - 13.Jan 2016
+\item Sprint 03 13.Jan 2016 - 10.Feb 2016
+\item Sprint 04 10.Feb 2016 - 02.März 2016
+\item Sprint 05 02.März 2016 - 14.März 2016
+\end{description}
 
 Diese Sprints wurden durch die sogenannten Abnahmeprotokolle verifiziert.
 Zu jedem Sprint gab es ebenfalls Sprintdokumentationen, die umschrieben was konkret 
