--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
@@ -4,23 +4,23 @@
 
 In der folgenden Sektion werden die gängisten RDBMS und NoSQL Datenbanken vorgestellt und gegeneinander Vergleicht. Es ist zu beachten, dass es ein wenig mehr zu NoSQL Datenbanken gibt, da wir mit einer solchen arbeiten (siehe \ref{subsec:datenmanagementimpl}).
 
-\paragraph{Relationale DBMS\nextline}
-\tab\textbf{MySQL\newline}
+\textbf{Relationale DBMS\newline}
+\textbf{MySQL\newline}
 Dieses RDBMS wurde ursprünglich entwickelt als \textit{lightweight database-like engine} und hatte in den ersten Versionen wenige von den Features die zu dem Zeitpunkt als essentiell gekennzeichnet waren. Trotz allem war es ein nützliches Tool, welches zwar kein eigentliches RDBMS war, aber dennoch einfach zum Einrichten und Verwenden war.
 
 In den letzten Jahren ist MySQL von dem ursprünglichen Weg abgekommen – es hat sich zu einem kompletten RDBMS entwickelt.  Trotz Bekanntheit wird MySQL immer noch nicht als die stabilste Datenbank, oder jene mit dem größten Feature-Set, angesehen.
 
 Alles im allen wird MySQL (oder Klone) in den meisten Fällen verwendet.
 
-\tab\textbf{Oracle\newline}
+\textbf{Oracle\newline}
 Dieses DBMS ist bekannt für seine große Anzahl an Features und dem größten Marktanteil. Vergleicht man Oracle mit anderen Datenbanken wird schnell klar, dass andere Datenbanken bei weitem nicht so viel können wie Oracle. Beinahe jedes Betriebssystem wird unterstützt; fast jede Programmiersprache hat Einbindungen die es ermöglichen mit einer Oracle Datenbank zu sprechen; Serverseite Programmierung hat viele Möglichkeiten; die Performance von Oracle Datenbanken ist exzellent; uvm.
 
 Es gibt aber zwei große, negative Aspekte welche Oracle für viele nicht verwendbar machen: kosten und die Komplexität von Administration
 
-\tab\textbf{PostgreSQL\newline}
+\textbf{PostgreSQL\newline}
 \todo{Content}
 
-\tab\textbf{SQL Server\newline}
+\textbf{SQL Server\newline}
 \todo{Content}
 
 \begin{table}[!htb]
@@ -46,7 +46,7 @@ Es gibt aber zwei große, negative Aspekte welche Oracle für viele nicht verwen
 
 \clearpage
 
-\paragraph{NoSQL Datenbanken\newline}
+\textbf{NoSQL Datenbanken\newline}
 
 Im allgemeinen gibt es vier Arten von NoSQL Datenbanken\cite{MELD.CH2-dbms.compNoSQLInfo}: Key-Value Stores, Column-Oriented Databases, Document Databases und Graph Stores. Selbstverständlich gibt es auch eigens entwickelte Datenbanken die nicht in diese vier Kategorien eingeteilt werden können, diese vier sind aber jene die am meisten verwendet werden.
 
