--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -52,7 +52,7 @@ Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer herunter gesetzt werden.
 \textbf{Definition und Enstehung\nextline}
 Kohlenstoffdioxid ist die zusammmensetzung aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. Die charkteristischen Eigenschaften von \ce{CO2} sind Unsichtbarkeit und Geruchslosigkeit. In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle; beispielsweise atmet der Mensch das Dioxid aus. Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. In der freien Luft werden diese Kohlenstoffpartikel zu \ce{CO2}, wobei das Dioxid nur ein Reaktionsträger ist und an sich keine giftige Eigenschaft besitzt. Das Problem mit den Unmengen an ausgestoßenem Schadstoffen ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
-Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen, wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff, erzeugen Kohlenstoff als Abgas. Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das \ce{CO2} über die Abgasanlage in die Atmosphäre. Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. Der benutzte Kraftstoff bestimmt, wie viel \ce{CO2} bei der Verbrennung erzeugt wird. Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.Der Kraftstoffverbrauch eines Wagens und sein \ce{CO2}-Output stehen daher in enger Verbindung. Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen \ce{CO2}-Ausstoß. Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben.
+Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen, wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff, erzeugen Kohlenstoff als Abgas. Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das \ce{CO2} über die Abgasanlage in die Atmosphäre. Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. Der benutzte Kraftstoff bestimmt, wie viel \ce{CO2} bei der Verbrennung erzeugt wird. Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.Der Kraftstoffverbrauch eines Wagens und sein \ce{CO2}-Output stehen daher in enger Verbindung. Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen \ce{CO2}-Ausstoß. Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben. \nextline
 
 \textbf{Das Kyoto-Protokoll\nextline}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
