--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -1,26 +1,20 @@
 \lfoot{Autor: Fitim Faiku}
 \subsection{Fahrkomfortanalyse}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Da die bewertung der einzelnen Fahrer durch den Fahrgast erfogt ist jedem klar.
-Diese Bewertung fÃ€llt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve fÃ€hrt.
-Um einen KFZ-Einsteiger mit mÃ¶glichst Informativen Daten zu \"bewerten\" habe ich mir einen Kammschen Kreis als Hilfe genommen.
+Da die bewertung der einzelnen Fahrer durch den Fahrgast erfolgt ist jedem klar.
+Diese Bewertung faellt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve faehrt.
+Um einen KFZ-Einsteiger mit mueglichst Informativen Daten zu \"bewerten\" habe ich mir einen Kammschen Kreis als Hilfe genommen.
 
 \subsubsection{Kammscher Kreis }
 Ein Kammsher Kreis ist ein ein Kreis in dem durch Polarkoordinaten die Extremwerte einer Fahrt eingezeichnet sind.
-Der Kreis ist so aufebaut, dass in der positiven y-Achse alle BremskrÃ€fte eingezeichnet werden, negative y-Achse fÃŒrs beschleunigen,
+Der Kreis ist so aufgebaut, dass in der positiven y-Achse alle Bremskraefte eingezeichnet werden, negative y-Achse alle beschleunigen,
 negative x-Achse alle rechts Kurven, positiven x-Achse alle Linkskurven.
-Es ist also ales verkehrt.
+Es ist also alles verkehrt.
+\todo{Kammscher Kreis Foto}
 
 \subsubsection{Implementierung}
 Um diesen Kammschen Kreis richtig darzustellen habe ich mir die Klasse canvas als Hilfe genommen, wobei die von Graphics erbt.
-Mittels Canvas konnte ich zufÃ€llig generierte 0-360grad Winkel und Radien erstellen und die dann in Polarkoordinaten umrechnen.
+Mittels Canvas konnte ich zufaellig generierte 0-360grad Winkel und Radien erstellen und die dann in Polarkoordinaten umrechnen.
 Somit konnte ich alle generierten werte Darstellen. 
 
 public int runden(float roh){
