closed Android Dev

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -28,10 +28,13 @@ HTML5 verwendet die Standard web Technologien, wie HTML5, JavaScript und CSS. Da
 
 \textbf{Hybrid} 
 \newline
-Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. 
+Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden, schoen gebaute CSS layout und das schreiben kompatible HTML-Code, der auf jeder Plattgorm funktioniert. 
+
 \newline
+\newline
+
 Schlussendlich entschieden wir uns fuer die Nativ Wariante, da wir gute Kenntnisse in Java haben und Nativ die Beste Performance fuer die Daarstellung der Daten hat.
 
 
-
+\cite{FAIF.CH2-android-dev.NativeWeborHybrid}
 \clearpage % DO NOT REMOVE
