--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -237,3 +237,10 @@
 	note = {Accessed on 27.03.2016}
 	year={2009}
 }
+@misc{FAIF.CH2-android-dev.NativeWeborHybrid, 
+author = {Pietro Saccomani},
+year = {2015},
+title = {Native, Web or Hybrid Apps? What’s The Difference?},
+howpublished = "\url{http://www.mobiloud.com/blog/2012/06/native-web-or-hybrid-apps/}",
+note = {Accessed on 28.03.2016}
+}
