--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
@@ -2,13 +2,19 @@
 \subsubsection{Kompatible Geräte}
 \label{subsec:device-compability}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Android kann auf vielen verschiedenen Plattformen, von Handys zu Tabletts laufen.
+Als Entwickler bietet die Palette von Geräten ein enormes Potenzial Publikum.
+Um auf all diesen Oberflaechen reibungslos zu funktionieren sollte es einige Feature Variabilität tolerieren und eine flexlible Benutzeroberflaeche zur Verfuegung stellen. 
 
-\url{https://developer.android.com/guide/practices/compatibility.html}
+Um das zu ermoeglichen bietet Android die moeglichkeit verschiedene XML Layouts zu erstellen um verschiedene Bildschirmgoeßen anzusprechen.
+
+Beim Programmieren der App kann auch die Minimum und Maximum Version des Devices eingestellt werden, wobei wir hier eine größere Menge an Usern erzielen wollen. 
+
+\begin{figure}[!htb]\centering
+	\includegraphics[width=1.0 \textwidth]{images/MinMaxVers}
+	\caption{Version}\label{Fig:Version}
+\end{figure}
+
+
 
 \clearpage % DO NOT REMOVE
