Finished chapter2 section

--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
@@ -18,10 +18,10 @@ Dieses DBMS ist bekannt für seine große Anzahl an Features und dem größten M
 Es gibt aber zwei große, negative Aspekte welche Oracle für viele nicht verwendbar machen: kosten und die Komplexität von Administration
 
 \textbf{PostgreSQL\newline}
-\todo{Content}
+PostgreSQL, oder einfach nur Postgres, ist eine Open-Source Objekt relationales Datenbankmanagementsystem (ORDBMS). Es wird häufig für online Applikationen, Data Centers und für Domain Registrierung verwendet. PostgreSQL steht auch für viele Betriebssysteme zur Verfügung: Linux, Windows, FreeBSD, Solaris, etc. In der IT Welt war Postgre schon immer ein Insider-Tipp und mit der steigenden Bekanntheit haben sich viele neue nützliche Features dazu entwickelt. 
 
 \textbf{SQL Server\newline}
-\todo{Content}
+Als eines der bekanntesten Enterprise DBMS hat Microsoft’s SQL Server einen großen Ruf zu verfolgen. In den meisten Fällen wird es für Webseiten, kommerzielle Applikationen, Netzwerk Applikationen, verwendet. Der SQL Server verfügt auch über einige Features wie eine 10GB große Speicherkapazität für Datenbanken, \textit{safe-store} von Daten mit hohen Sicherheitsniveaum Data warehousing, uvm. 
 
 \begin{table}[!htb]
 \centering
