--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -19,7 +19,6 @@
 	note = {Accessed on 28.03.2016}
 }
 
-@conference{Carnot.Wirkungsgrad,
 @misc{MELD.CH2-relationaleDB.rdbmsBuch, 
     author = {Leavitt N.},
     year = {2010},
@@ -231,10 +230,10 @@
 }
 
 @misc{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2,
-	title={Verordnung (EG) Nr. 443/2009 des Europ{\"a}ischen Parlaments und des Rates vom 23. April 2009 zur Festsetzung von Emissionsnormen f{\"u}r neue Personenkraftwagen im Rahmen des Gesamtkonzepts der Gemeinschaft zur Verringerung der CO 2-Emissionen von Personenkraftwagen und leichten Nutzfahrzeugen},
-	author={Parlament, Europ{\"a}isches and DER RAT DER EUROP{\"A}ISCHEN, UNION},
+	title={Verordnung (EG) Nr. 443/2009},
+	author={Europäisches Parlament},
 	howpublished="\url{http://www.bmub.bund.de/fileadmin/bmu-import/files/pdfs/allgemein/application/pdf/eu_verordnung_co2_emissionen_pkw.pdf}",
-	note = {Accessed on 27.03.2016}
+	note = {Accessed on 27.03.2016},
 	year={2009}
 }
 @misc{FAIF.CH2-android-dev.NativeWeborHybrid, 
