--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -24,6 +24,7 @@
 \usepackage{glossaries}
 \usepackage{titlesec}
 \usepackage{mhchem}
+\usepackage{wrapfig}
 \usepackage{accsupp}
 \usepackage[headsep=1cm,headheight=3cm,hmargin=2cm,vmargin=2.5cm]{geometry}
 \usepackage[nolist]{acronym}
