--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -49,8 +49,8 @@
 %\togglefalse{devel}
 
 \iftoggle{devel} {
-	\newcommand{\comment}[1]{{\bf \colorbox{yellow}{\color{black}#1}}}
-	\newcommand{\todo}[1]{{\bf \colorbox{red}{\color{white}TODO: #1}}}	
+	\newcommand{\comment}[1]{{\bf \colorbox{yellow}{\color{black}#1}}\nextline}
+	\newcommand{\todo}[1]{{\bf \colorbox{red}{\color{white}TODO: #1}}\nextline}	
 } {
 	\newcommand{\comment}[1]{{}}
 	\newcommand{\todo}[1]{{}}
