--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -166,58 +166,58 @@
 }
 
 @misc{SIMR.CH2-CAN-Bus.OBDIITypeA,
-    author = {SAE International},
-    title = {OBD II Typ A Masszeichnung},
-    year = {1992},
-    note = {Online; accessed 22.03.2016},
-    howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}"
+    author = {Xoneca, Wikimedia User},
+    title = {Shape of a female OBD-II type A connector.},
+    year = {2015},
+    note = {Accessed 28.03.2016},
+    howpublished="\url{https://commons.wikimedia.org/wiki/File:OBD-II_type_A_female_connector_shape.svg}"
 }
 
 @misc{SIMR.CH2-CAN-Bus.OBDIITypeB,
-    author = {{SAE International}},
-    title = {OBD II Typ B Masszeichnung},
-    year = {1992},
-    note = {[Online; accessed 22.03.2016]},
-    howpublished="\url{http://www.obdtester.com/images/j1962f_type_b.gif}"
+    author = {Xoneca, Wikimedia User},
+    title = {Shape of a female OBD-II type B connector.},
+    year = {2015},
+    note = {Accessed 28.03.2016},
+    howpublished="\url{https://commons.wikimedia.org/wiki/File:OBD-II_type_B_female_connector_shape.svg}"
 }
 
 @misc{SIMR.CH1-Fahrstil-Analyse.Schaltempfehlung,
-    author = {{Auto Zeitung}},
+    author = {Auto Zeitung},
     title = {Sprit Sparen, Schaltempfehlung 10. Paragraph},
     year = {2015},
-    note = {Online; accessed 22.03.2016},
+    note = {Accessed 22.03.2016},
     howpublished="\url{http://www.autozeitung.de/tipps-tricks/sprit-sparen-autofahren}"
 }
 
 @misc{SIMR.CH1-Fahrstil-Analyse.TorquePro,
-    author = {{Ian Hawkins}},
+    author = {Ian Hawkins},
     title = {Torque Pro (OBD2 / Auto)},
     year = {2016},
-    note = {Online; accessed 22.03.2016},
+    note = {Accessed 22.03.2016},
     howpublished="\url{http://torque-bhp.com}"
 }
 
 @misc{SIMR.CH2-CAN-Bus.GolfOBD,
-    author = {{National Center for Automotive Science \& Technology at Weber State University}},
+    author = {National Center for Automotive Science \& Technology at Weber State University},
     title = {Golf VI OBD Position},
     year = {unknown},
-    note = {Online; accessed 22.03.2016},
+    note = {Accessed 22.03.2016},
     howpublished="\url{http://www.obdclearinghouse.com/OBD-CH/documents/newdocuments/volkswagen/golf/2002.jpg}"
 }
 
 @misc{SIMR.CH2-CAN-Bus.PoloOBD,
-    author = {{Arturo R Montesinos}},
+    author = {Arturo R Montesinos},
     title = {Polo IV 9N3 OBD Position},
     year = {2011},
-    note = {Online; accessed 22.03.2016},
+    note = {Accessed 22.03.2016},
     howpublished="\url{https://www.flickr.com/photos/armk/5578899043}"
 }
 
 @misc{SIMR.CH2-CAN-Bus.3erOBD,
-    author = {{Matt Shannahan (tahoerdr)}},
+    author = {Matt Shannahan (tahoerdr)},
     title = {BMW 3er E90 OBD Position},
     year = {unknown},
-    note = {Online; accessed 22.03.2016},
+    note = {Accessed 22.03.2016},
     howpublished="\url{http://i8.photobucket.com/albums/a47/tahoerdr/E90Post/MattShannahanIDDocs006.jpg}"
 }
 
@@ -227,6 +227,14 @@
 	year={2007},
 	howpublished = "\url{http://gizmodo.com/313871/nissan-gt-r-multifunction-display-looks-like-a-playstation-game}",
 	note = {Accessed on 27.03.2016}
+}
+
+@misc{SIMR.CH1-Fahrstil-Analyse.Motorkennfeld,
+	author = {Karl Sowada},
+	title={Diagramm des Energieverbrauchs beim Otto- und Dieselmotor},
+	year={2012},
+	howpublished = "\url{http://sk-8.de/energie/eneBenzinsparenPkw.php}",
+	note = {Accessed on 28.03.2016}
 }
 
 @misc{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2,
