--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -6,6 +6,8 @@ Leider kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen ode
 Vor der Antragstellung wurde überlegt, ob es bereits bekannte Systeme gibt, um seinen Fahrstil nachhaltig zu verbessern. Man fand dabei heraus, dass es bereits in vielen anderen Bereichen Apps gibt, welche sich das \textit{Sharing}-Prinzip zu Nutze gemacht haben und so äußerst bekannt geworden sind. Eines der bekanntesten österreichischen Beispiele ist das, stetig erweiterte, App-System von Runtastic. \cite{SIMR.CH1-Fahrstil-Analyse.BusinessplanRuntastic}
 Nur in Bezug auf das Autofahren konnte kein System, das dieses Prinzip verfolgt, gefunden werden.
 
+\todo{captions auf eine Zeile}
+
 \comment{MELD:Was hat das alles konkret mit Analyse und Verbesserung des Fahrstiles zu tun? - Element der Peer-Pressure erklärt und integriert, so besser?}
 Zu Beginn des Diplomprojektes gab es also keine Möglichkeiten für verbesserungswillige Autofahrer ihren Fahrstil zu verbessern und dies dann sogar zu teilen. Das Teilen der Fahrstilanalyse trägt aufgrund des \textit{Peer-Pressure}-Effekts dazu bei, dass die Nutzer ihren Fahrstil verbessern, da Sie andere Nutzer überbieten möchten. So versuchen sich die Fahrer dadurch also stetig zu verbessern.
 Dies hat unsere Marktumfeldanalyse ergeben, wobei uns besonders auffiel, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils nötig wäre. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten. 
@@ -20,10 +22,11 @@ Eine Analyse des Fahrstils, nach Parametern der Fahrgastbequemlichkeit, ist gar 
 
 \newpage
 Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei kostengünstigeren Fahrzeugen, oft äußerst simpel gehalten, wobei ab einer gewissen Drehzahl die darauffolgenden Gänge vorgeschlagen werden oder nur auf den Normzyklus optimiert wird. \cite{SIMR.CH1-Fahrstil-Analyse.Schaltempfehlung} Der Motorwirkungsgrad nach dem Carnot-Prozess, wird dabei aber kaum verwendet. Der Carnot-Prozess beschreibt die Errechnung des \textit{theoretisch möglichen} Motorwirkungsgrad, ohne hinzuziehen von Reibung, Temperatur und anderen natürlichen Einflussgrößen. \cite{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad} Genauere Ausführungen zu diesem Thema finden Sie im Kaptiel \hyperlink{subsubsection.2.1.2}{Thermodynamik} \todo{fix inter-chapter reference} mehr. 
+Bei folgendem Diagramm ist nach rechts ist die Drehzahl aufgespannt, nach oben sieht man die abgegebene Kraft. Man erkennt die niedrigen Verbrauchswerte vor allem bei Volllast.
 
 \begin{figure}[!htb]\centering
 	\includegraphics[width=0.6\textwidth]{images/motorkennfeld}
-	\caption{Diagramm des Energieverbrauchs beim Otto- und Dieselmotor. Nach rechts ist die Drehzahl aufgespannt, nach oben sieht man die abgegebene Kraft. Man erkennt die niedrigen Verbrauchswerte vor allem bei Volllast. \cite{SIMR.CH1-Fahrstil-Analyse.Motorkennfeld}}\label{Fig:imgMotorkennfeld}
+	\caption{Diagramm des Energieverbrauchs beim Otto- und Dieselmotor. \cite{SIMR.CH1-Fahrstil-Analyse.Motorkennfeld}}\label{Fig:imgMotorkennfeld}
 \end{figure}
 
 Eine Live-Messung von \ce{CO2} Werten während der Fahrt ist momentan eine Schätzung, welche durch die Fahrzeughersteller aufgrund der OBD-II Daten durchgeführt und bei sehr wenigen Modellen als Zusatz angezeigt wird. Echte Grenzwerte oder gar eine Analysefunktionalität gibt es in dieser Hinsicht aber nicht. Die \ce{CO2} Werte werden in Zukunft noch weitaus relevanter, weil, wie mein Kollege im folgenden Kapitel ausführlich beschreibt, bis 2020 versucht wird einen Durschnittsaustoss von 95 g/km zu erzielen. \cite{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2}
@@ -36,7 +39,7 @@ Die Möglichkeit einer Analyse konnte aber bei der Evaluierung bei keiner der ko
 
 \begin{figure}[!htb]\centering
 	\includegraphics[width=0.6\textwidth]{images/torquePro}
-	\caption{Möglichkeiten mit der kostenpflichtigen Torque Pro App und der OBD Schnittstelle \cite{SIMR.CH1-Fahrstil-Analyse.TorquePro}}\label{Fig:imgGTR}
+	\caption{Möglichkeiten mit der kostenpflichtigen Torque App  und der OBD Schnittstelle \cite{SIMR.CH1-Fahrstil-Analyse.TorquePro}}\label{Fig:imgGTR}
 \end{figure}
 
 Gerade diese Funktionalität würde aber von Fahranfängern benötigt werden um frühzeitig und selbstständig Fehler ihres Fahrstils zu erkennen und auszubessern zu können. Insbesondere konnten wir, unter anderem anhand unserer Erfahrungen, feststellen, dass das Schalten und das gleichmäßige und verbrauchsarme Fahren für viele Fahranfänger eine Herausforderung darstellt. Durch eine Analyse Funktion könnten motivierte Fahranfänger Anfangsschwieriegkeiten schneller ablegen und die schlechten Angewohnheiten würden sich nicht im  Gedächtnis eines Fahranfängers verankern, sondern es würden sich nur positive Charakteristika gemerkt werden. \comment{JOSC: Definiere bitte positive und schlechte Angewohnheiten oder formulier um - so?} 
