--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -15,25 +15,25 @@ Da Android mehrere Programmierarten unterstützt musste Evaluiert werden welche 
 
 \textbf{Native} 
 \newline
-Eine Native App wird fuer die IOS und Android Plattformen verwendet wobei die Programmiersprachen dafuer Objektiv C und Java sind.
+Eine Native App wird fuer die IOS und Android Plattformen verwendet wobei die Programmiersprachen dafür Objektiv C und Java sind.
 Native Apps Performen am Besten.
-Die Dokumentation zu Native Apps ist am Besten, da es ueber 2500 buecher zu IOS und Android entwicklung gibt.
-Fuer Nativ Apps werden sogennante Entwicklungsumgebungen oder auch genannt IDE verwendet um auf denen die gewuenschte App zu Programmieren. 
+Die Dokumentation zu Native Apps ist am Besten, da es über 2500 Bücher zu IOS und Android Entwicklung gibt.
+Für Native Apps werden sogennante Entwicklungsumgebungen oder auch genannt IDEs verwendet, um auf denen die gewünschten Funktionalitäten zu Programmieren. 
 
 \newline
 \textbf{HTML5} 
 \newline
-HTML5 verwendet die Standard web Technologien, wie HTML5, JavaScript und CSS. Das gute an HTML5 Apps ist, dass es auf verschiedenen Plattformen verwendet werden kann. 
+HTML5 verwendet die Standard Web-Technologien wie HTML5, JavaScript und CSS. Das gute an HTML5 Apps ist, dass es auf verschiedenen Plattformen verwendet werden kann. 
 \newline
 
 \textbf{Hybrid} 
 \newline
-Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden, schoen gebaute CSS layout und das schreiben kompatible HTML-Code, der auf jeder Plattgorm funktioniert. 
+Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden, schoen formatierte CSS-layouts und das schreiben von kompatiblem HTML-Code, der auf jeder Plattgorm funktioniert. 
 
 \newline
 \newline
 
-Schlussendlich entschieden wir uns fuer die Nativ Wariante, da wir gute Kenntnisse in Java haben und Nativ die Beste Performance fuer die Daarstellung der Daten hat.
+Schlussendlich entschieden wir uns für die Native Variante, da wir gute Kenntnisse in Java haben und Nativ die Beste Performance für die Daarstellung der Daten hat.
 
 
 \cite{FAIF.CH2-android-dev.NativeWeborHybrid}
